--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/qs@6.10.2/dist/qs.js"></script>
   </head>
   <script>
     async function urlParam() {
@@ -24,6 +25,21 @@
       console.log(res);
     }
     query();
+
+    async function formUrlEncoded() {
+      const res = await axios.post(
+        '/api/person',
+        Qs.stringify({
+          name: '光',
+          age: 20,
+        }),
+        {
+          headers: { 'content-type': 'application/x-www-form-urlencoded' },
+        },
+      );
+      console.log(res);
+    }
+    formUrlEncoded()
   </script>
   <body>
     <div>
